# cpp-wasm-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-wasm.sh  codecov.yml  project.json  run-clang-format.bat  run-clang-format.sh
.github/workflows/: ci.yml  codeql-analysis.yml  deploy-pages.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Emscripten.cmake  Options.cmake  StaticAnalyzers.cmake
include/: exampleHeader.h  headerExample.h
src/: CMakeLists.txt  main.cpp
src/libExample/: CMakeLists.txt
src/libExample/include/libExample/: libExample.h
src/libExample/src/: libExample.cpp
src/libExample/tests/: CMakeLists.txt  libExampleTests.cpp
test/: CMakeLists.txt  example_test.cpp
web/: app.js  build-wasm.sh  index.html  run-wasm.sh  vite.config.js
